--- a/frontend/frontend/src/App.css
+++ b/frontend/frontend/src/App.css
@@ -35,3 +35,16 @@
   backdrop-filter: blur(2px); /* opcional: desfoca o fundo da própria camada */
 }
 
+.bUsuario {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+}
+
+.card {
+  width: 70vw;   /* 40% da largura da tela */
+  margin: 0 auto;
+  
+}
